--- a/doc/econ-val.Rnw
+++ b/doc/econ-val.Rnw
@@ -52,15 +52,19 @@ library(Amelia)
 
 \doublespacing
 \section{Introduction}
-Since the Reform and Opening policy in 1978, China has undergone remarkably changes in economy, social structures and political structures. According to World Bank, China's GDP per capita increases from 154.97 USD in 1978 to 6807.43 USD in 2013, and World Bank has classified China as a `middle income' country. Dramatical changes in economic development secures Chinese Communist Party's (CCP) dominance in the post-Mao era (Holbig and Gilley 2010), many Chinese citizens express `special gratitude' to CCP for the remarkable increase of economy as well as their living standards. On the other hand, CCP justifies the authoritarian rule as `the only possible and correct' for Chinese people's sake, `Western Democracies are not suitable in China' (Yang and Chen 2013, Pei 2012).
+Since the Reform and Opening policy in 1978, China has undergone remarkably changes in economy, social structures and political structures. According to World Bank, China's GDP per capita increases from 154.97 USD in 1978 to 6807.43 USD in 2013, and World Bank has classified China as a `middle income' country. Dramatically changes in economic development secures Chinese Communist Party's (CCP) dominance in the post-Mao era (Holbig and Gilley 2010), many Chinese citizens express `special gratitude' to CCP for the remarkable increase of economy as well as their living standards. On the other hand, CCP justifies the authoritarian rule as `the only possible and correct' for Chinese people's sake, `Western Democracies are not suitable in China' (Yang and Chen 2013, Pei 2012).
 
-Stable authoritarian ruling accompanied by rapid economic growth makes China a unique case in comparative politics. On one hand, economic development have dramatically shifted people's lifestyles: ordinary citizens can now afford modern appliances such as TV sets, computers, washing machines, automobiles etc., and many Chinese families can even send their children abroad for better education. Many scholars thus conclude that Chinese people are in favor of the strong nondemocratic governance because of rapid economic growth (Chen and Dickson 2008). On the other hand, economic growth does not unilaterally increase political support. Huntington (2008) made the famous argument that rapid economic growth often comes with dramatical changes of society, which brings about regime instability. With respect to the China case, economic growth brings about noticeable gaps between the rich and poor, government officials and the common citizens. Many Chinese citizens express their dissatisfaction of inequality, limited degrees of political rights and freedom of speech online (King 2013, Mackinoon 2011, Pan and Xu 2015). Protests on land reform and housing are not unusual titles in Chinese media (Li 2008, Kennedy 2008).
+Stable authoritarian ruling accompanied by rapid economic growth makes China a unique case in comparative politics. On one hand, economic development have dramatically shifted people's lifestyles: ordinary citizens can now afford modern appliances such as TV sets, computers, washing machines, automobiles etc., and many Chinese families can even send their children abroad for better education. Many scholars thus conclude that Chinese people are in favor of the strong nondemocratic governance because of rapid economic growth (Chen and Dickson 2008). On the other hand, economic growth does not unilaterally increase political support. Huntington (2008) made the famous argument that rapid economic growth often comes with dramatically changes of society, which brings about regime instability. With respect to the China case, economic growth brings about noticeable gaps between the rich and poor, government officials and the common citizens. Many Chinese citizens express their dissatisfaction of inequality, limited degrees of political rights and freedom of speech online (King 2013, Mackinoon 2011, Pan and Xu 2015). Protests on land reform and housing are not unusual titles in Chinese media (Li 2008, Kennedy 2008).
 
 According to Modernization theory (Lipset 1959, 1993), economic growth will foster urbanization, industrialization, increasing levels of education and income, and as a result it will increase political participation and demand for democracy. Although the mechanism is challenged by Przeworski and Limongi (1997), still there is a general pattern between economic modernization and democracy. Since economic development not only changed Chinese citizen's physical well-beings but also cognitive ideas, it is worthwhile to test the relation between economic development and political attitudes towards a nondemocratic government (Zhai 2015).
 
 On the other hand, retrospective evaluation theory holds that citizens value the economic performance of the government and vote accordingly (Lewis-Beck and Stegmaier 2000).  Although previous economic voting studies are based on democratic elections, there is no significant reason that citizens living in authoritarian countries would NOT value government performance. In fact, Lewis-beck et al. (2014) show that the vote-popularity function can be applied to nondemocratic settings like China. Therefore, instead of the negative relationship between economic development and demand for democracy; retrospective evaluation theory holds that good government performance will yield solid political support.
 
-This project differs from the previous public opinion studies in that I incorporate provincial economic growth data into individual level surveys. Because there are significant variations of economic growth rates in different provinces, this allows me to test the two competing hypotheses simultaneously. Overall, this manuscript is trying to disentangle the relation between economic development and political attitudes in a nondemocratic environment. 
+
+??Two different sets of stories here: relative deprivation?? MLM
+
+???No need for this This project differs from the previous public opinion studies in that I incorporate provincial economic growth data into individual level surveys. Because there are significant variations of economic growth rates in different provinces, this allows me to test the two competing hypotheses simultaneously. Overall, this manuscript is trying to disentangle the relation between economic development and political attitudes in a nondemocratic environment. 
+
 
 
  
@@ -77,9 +81,10 @@ This project differs from the previous public opinion studies in that I incorpor
 \subsection{Modernization Theory}
 Modernization theory holds that social-economic development includes a multi-stage process towards democracy. Accordingly, economic development will bring about higher levels of literacy, education, higher income and better living standards. It is argued that when people are economically better off, they will engage in many political activities and struggle for more political rights. This general pattern received some weak empirical support (such as Boix and Stokes 2003), but it has also been criticized for its unclear causal mechanism. Later Scholars refine modernization theory and propose two general causal mechanisms linking modernization and democratization together: through inequality and redistribution of wealth and through the transition of culture and values.
 
-
-Economic explanations of modernization theory hold that inequality plays the pivotal role in triggering demand for redistribution (Acemoglu and Robinson 2005, Boix 2003), and consequently high levels of inequality will increase citizens' dissatisfaction on government and increase demand for political reform. According to Kuznets (1955), rapid economic growth
-often comes with increasing gap of income inequality. And as a result of enlarging income inequality, people will demand political reform and redistribution. Therefore, we have:
+In the elite-citizen game-theory model, inequality plays the pivotal role in determining the potential probability of democratic transition (Acemoglu and Robinson 2005. Boix 2003). Boix (2003) argues that high inequality levels will increase citizens' dissatisfaction on government and increase demand for political reform. According to Kuznets (1955), rapid economic growth
+often comes with increasing gap of income inequality. And as a result of enlarging income inequality, people will demand political reform and redistribution. 
+Therefore, we have:
+\nocite{Acemoglu2005}
 
 \begin{quotation}
 	Hypothesis 1 (Inequality): Rapid economic growth increases income gap, and consequently triggers people's demand for political democracy.
@@ -95,7 +100,11 @@ Cultural explanations of modernization theory focus on the changes in the social
 
 
 \subsection{`Economic Voting' Theory}
-Unlike modernization theory which depicts the path to democracy as a unidimensional route, `economic voting' literatures model political support as a function of government performance, especially on economic and social issues (Lewis-Beck and Stegmaier 2000). Although citizens in a authoritarian country do not vote the way in democracies, they can express their opinions in informal ways. For instance, in a village-level field Lily Tsai identifies that `accountability' exists in rural China (Tsai 2007). Therefore, a natural hypothesis is that people who highly evaluate government performance in socio-economic issues tend to support the incumbent elites. Unfortunately, the data structure I have does not contain important questions on socio-tropic evaluation; nevertheless, the CGSS 2003 survey includes related questions on `pocket book' voting, respondents were asked to compare their income and living condition to 3 years ago/5 years ago and 10 years ago, as well as prospective evaluation (compare with what it may be 3 years/5 year/10 years later). Consequently we have the following two hypotheses:
+Unlike modernization theory which depicts the path to democracy as a unidimensional route, `economic voting' literature model political support as a function of government performance, especially on economic and social issues (Lewis-Beck and Stegmaier 2000). Although citizens in a authoritarian country do not vote the way in democracies, they can express their opinions in informal ways. For instance, in a village-level field Lily Tsai identifies that `accountability' exists in rural China (Tsai 2007). Therefore, a natural hypothesis is that people who highly evaluate government performance in socio-economic issues tend to support the incumbent elites. Unfortunately, the data structure I have does not contain important questions on socio-tropic evaluation; nevertheless, the CGSS 2003 survey includes related questions on `pocket book' voting, respondents were asked to compare their income and living condition to 3 years ago/5 years ago and 10 years ago, as well as prospective evaluation (compare with what it may be 3 years/5 year/10 years later). Consequently we have the following two hypotheses:
+
+
+
+%This doesn't seem relevant.
 
 \begin{quotation}
 	Hypothesis 3 (Retrospective Evaluation): Citizens whose economic condition increased/decreased over the past years tend to support incumbent governance/political reforms
@@ -154,7 +163,7 @@ The second dependent variable that I use is political support for the CCP govern
 	Do you agree or disagree with the following argument: as long as economy is good, there is no need for political reform and democracy
 \end{quotation}
 
-The distribution of the reponses is shown in Figure \ref{democracy}. Unlike the Trust in Government question, Demand for Democracy question has a higher nonresponse rate. It is somewhat expected because political reform or democracy is sensitive topic. However, unlike the trust in Government question in which the majority of respondents support the Government, in Democracy question nearly half of the respondents require political reform and democracy.
+The distribution of the responses is shown in Figure \ref{democracy}. Unlike the Trust in Government question, Demand for Democracy question has a higher nonresponse rate. It is somewhat expected because political reform or democracy is sensitive topic. However, unlike the trust in Government question in which the majority of respondents support the Government, in Democracy question nearly half of the respondents require political reform and democracy.
 
 \begin{figure}[H]
 	\centering
@@ -199,7 +208,7 @@ The basic distribution is shown in Figure \ref{rich}
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=90mm]{rich_poor}
-	\caption{\label{rich} Tension Between thr Rich and Poor}
+	\caption{\label{rich} Tension Between the Rich and Poor}
 \end{figure}
 
 Critical Thinking is based on the following 3 questions, distributions are shown in Figure \ref{Critical}.
@@ -378,7 +387,7 @@ Table \ref{evaluation} show the result of testing `Economic Voting' theory. Sinc
 \newpage
 
 \section{Alternative Mechanism: an information model based on censorship}
-Memory-based model argues that people's attitude is drawn from the most recent memory (Zaller 1992). Consequently one might need to think about the effect of media coverage in the authoritarian context (King et al. 2013, 2016; Mackinnon 2011). TV news reports by the central TV station speak in a favorable tone to the CCP governance. Similarly, government-owned newspaper like ``Poeple's Daily", which is the largest newspaper company in China, is known as standing in the same line with Chinese Communist Party \footnote{Internet usage may bring out another self-selection issue: people who are dissatisfied with the government-dominated media may turn to the Internet. Fortunately this is not a serious issue in CGSS 2006: most people (76\% of the total respondents) do not have access to the Internet}. Geddes and Zaller (1989) argue that media exposure has different impacts on people who think critically or not. For those who have higher levels of political awareness, they can resist the influence of the government dominated media. Therefore, we may expect a mediation effect through the ability of critical thinking:
+Memory-based model argues that people's attitude is drawn from the most recent memory (Zaller 1992). Consequently one might need to think about the effect of media coverage in the authoritarian context (King et al. 2013, 2016; Mackinnon 2011). TV news reports by the central TV station speak in a favorable tone to the CCP governance. Similarly, government-owned newspaper like ``Poeple's Daily", which is the largest newspaper company in China, is known as standing in the same line with Chinese Communist Party \footnote{Internet usage may bring out another self-selection issue: people who are dissatisfied with the government-dominated media may turn to the Internet. Fortunately this is not a serious issue in CGSS 2006: most people (76\% of the total respondents) do not have access to the Internet}. Geddes and Zaller (1989) argue that media exposure has different impacts on people who think critically or not. For those who have higher levels of political awareness, they can resist the influence of the government dominated media. Therefore, we may expect a moderation effect through the ability of critical thinking:
 
 \begin{itemize}
 	\item Media exposure has less impact on government support among those who think critically about politics
@@ -442,7 +451,7 @@ To model the influence of media, I add media exposure (average frequency score o
 
 
 \section{Discussion}
-So far this manuscript analyzes two competing theories: modernization hypothesis and `Economic Voting' literatures (performance evaluation model). My results show that the two approaches of modernization theory predicts government trust and demand for democracy consistently. Inequality remains negatively correlated with government, which is as expected. However, inequality is negatively related to demand for democracy as well. This indicates that for those who emphasize the importance of inequality; their demand are still in economic domain and there is no `spillover' effect of linking Democracy to less inequality. This finding challenges the economic explanation of democratization and redistribution (e.g. Boix 2003). On the other hand, the cultural explanation of value shifts and ability of critical thinking goes consistently with the theoretical prediction. Future study on public opinion research in nondemocratic countries may keep a record of value change.
+So far this manuscript analyzes two competing theories: modernization hypothesis and `Economic Voting' literature (performance evaluation model). My results show that the two approaches of modernization theory predicts government trust and demand for democracy consistently. Inequality remains negatively correlated with government, which is as expected. However, inequality is negatively related to demand for democracy as well. This indicates that for those who emphasize the importance of inequality; their demand are still in economic domain and there is no `spillover' effect of linking Democracy to less inequality. This finding challenges the economic explanation of democratization and redistribution (e.g. Boix 2003). On the other hand, the cultural explanation of value shifts and ability of critical thinking goes consistently with the theoretical prediction. Future study on public opinion research in nondemocratic countries may keep a record of value change.
 
 Another issue here is the possible self-censorship problem in surveys like CGSS. For instance, there are about 10\% nonresponse rates in the Critical Thinking questions. This is a much higher rate than the previous attribute questions. It is highly likely that respondents are hiding their true opinions. Jiang and Yang (2015) analyze the difference between `less sensitive' and `sensitive' questions to detect the problem of self-censorship. Alternatively, there're many experimental studies using list experiments (Meng et al. 2014) and Implicit Association Test. Combining survey researches and experiment studies together may provide us with a better understanding of public opinion in nondemocratic countries like China.
 
